change to resume info

--- a/page2/index.html
+++ b/page2/index.html
@@ -14,7 +14,7 @@
   </title>
 
   
-  <link rel="canonical" href="https://ulc5410.github.io/portfolio/">
+  <link rel="canonical" href="https://ulc5410.github.io/portfolio/page2/">
   
 
   <link rel="stylesheet" href="https://ulc5410.github.io/portfolio/public/css/poole.css">
